force-app/main/default/objects/ServiceTerritory/fields/FSL__Hide_Emergency_Map__c.field-meta.xml
<CustomField>
    <fullName>FSL__Hide_Emergency_Map__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the map will be shown on the emergency wizard</description>
    <label>Hide Emergency Map</label>
    <type>Checkbox</type>
</CustomField>