force-app/main/default/objects/ServiceTerritory/fields/FSL__NumberOfServicesToDripFeed__c.field-meta.xml
<CustomField>
    <fullName>FSL__NumberOfServicesToDripFeed__c</fullName>
    <label>Number Of Services To Drip Feed</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>