force-app/main/default/objects/ServiceTerritory/fields/FSL__Service_Cluster_Min_Size__c.field-meta.xml
<CustomField>
    <fullName>FSL__Service_Cluster_Min_Size__c</fullName>
    <label>Service Cluster Min Size (Closed Pilot)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>