force-app/main/default/objects/ServiceTerritory/fields/FSL__Service_Cluster_Proximity__c.field-meta.xml
<CustomField>
    <fullName>FSL__Service_Cluster_Proximity__c</fullName>
    <label>Service Cluster Proximity (Closed Pilot)</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>