force-app/main/default/objects/ServiceTerritory/fields/FSL__TerritoryLevel__c.field-meta.xml
<CustomField>
    <fullName>FSL__TerritoryLevel__c</fullName>
    <label>Territory Level</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>