force-app/main/default/objects/ServiceTerritory/listViews/All_ServiceTerritories.listView-meta.xml
<ListView>
    <fullName>All_ServiceTerritories</fullName>
    <filterScope>Everything</filterScope>
    <label>Todos los territorios de servicios</label>
</ListView>